# 40_gamm_bd_reduced_time_2

./: CMakeLists.txt  Makefile  boundary.cc  boundary.hh  boundary.txt  cell.cc  cell.hh  cells.txt  compile_commands.json  face.cc  face.hh  faces.txt  file_conversion.py  main.cc  mesh.cc  mesh.hh  output  point.cc  point.hh  points.txt  pressure.txt  pv_coupling.cc  pv_coupling.hh  scalar_boundary_field.cc  scalar_boundary_field.hh  scalar_field.cc  scalar_field.hh  vector.cc  vector.hh  vector_boundary_field.cc  vector_boundary_field.hh  vector_field.cc  vector_field.hh  velocity_field_x.txt  velocity_field_y.txt  velocity_magnitude.txt
.cache/clangd/index/: boundary.cc.CBA119428C23178A.idx  boundary.hh.8D0914AB52598344.idx  cell.cc.B474E6D054BF49CC.idx  cell.hh.345D8CC37F85B860.idx  const_scalar_field.cc.0968E8DA53821C47.idx  const_scalar_field.hh.8A75C649EA50E5BC.idx  const_vector_field.cc.7EE614270912B0C7.idx  const_vector_field.hh.6E90A349D6C62F20.idx  face.cc.95B19BF8A13EE1CF.idx  face.hh.9EE5B57CC35ACB46.idx  main.cc.22F9CF07BD0B632A.idx  mesh.cc.269F47BD22F96A7E.idx  mesh.hh.5E7DCB338B75EF29.idx  point.cc.91B9633924C9D75B.idx  point.hh.CF11281EAF7C73FC.idx  scalar_field.cc.BBFEE1C6F50C7B2D.idx  scalar_field.hh.2614355D6F271D25.idx  vector.cc.3D1F592D188A2214.idx  vector.hh.5E838F0114725169.idx  vector_field.cc.667647A5903D0F31.idx  vector_field.hh.0D5602C75C340F60.idx
mesh_old/: boundary.txt  cells.txt  faces.txt  points.txt
